* Fri Feb 09 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 7.4.2-0
- Add the missing puppetlabs/inifile dependency to the metadata.json

* Mon Oct 02 2017 Chris Tessmer <chris.tessmer@onyxpoint.com> - 7.4.1-0
- Fixed bug where `:selinux_config_mode` is tested even when `:selinux` is
  false.

* Mon Sep 11 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 7.4.0-0
- Add SHA256-based option to generate the minute parameter for
  a client's puppet agent cron from its IP address. This option
  is intended mitigate the undesirable clustering of client puppet
  agent runs, when the number of IPs to be transformed is less
  than the minute range over which the randomization is requested
  (60) and/or the client IPs are not linearly assigned.

* Tue Aug 01 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 7.4.0-0
- Ensure OBE 'puppet_crl_pull' cron job from pupmod versions prior
  to 7.3.1 is removed.

* Thu Jul 27 2017 Nick Markowski <nmarkowski@keywcorp.com> - 7.4.0-0
- README updates:
  - Informed users of legacy auth.conf deprecation
  - Provided instructions to reproduce custom auth.conf entries
    in puppet

* Thu Jun 22 2017 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 7.3.1-0
- fixed the path to the pki_files and krb_files in the auth.conf
  so remote systems could download files.
- Update puppet requirement in metadata.json

* Wed Jun 14 2017 Nick Miller <nick.miller@onyxpoint.com> - 7.3.1-0
- Removed Puppet CRL download, the puppet agent now checks for the expiration of
  the cert automatically

* Mon Jun 05 2017 Nick Markowski <nmarkowski@keywcorp.com> - 7.3.1-0
- Ensure legacy auth.conf is backed up before removing it. This is a
  follow up to SIMP-3049 based on feedback to SIMP-3196.

* Mon May 22 2017 Kendall Moore <kendall.moore@onyxpoint.com> 7.3.1-0
- Added manifest to manage simp-specific puppet master auth requirements
- Disabled puppetserver setting to enable legacy auth.conf by default
- Remove legacy auth.conf placed by the `puppet-agent` package
