@@ -8,14 +8,16 @@ fixtures:
     augeasproviders_core: https://github.com/simp/augeasproviders_core
     augeasproviders_grub: https://github.com/simp/augeasproviders_grub
     augeasproviders_puppet: https://github.com/simp/augeasproviders_puppet
-    haveged:
-      repo: https://github.com/simp/puppet-haveged
-      branch: simp-master
+    haveged: https://github.com/simp/pupmod-simp-haveged
     inifile: https://github.com/simp/puppetlabs-inifile
     iptables: https://github.com/simp/pupmod-simp-iptables
     logrotate: https://github.com/simp/pupmod-simp-logrotate
     pam: https://github.com/simp/pupmod-simp-pam
-    concat: https://github.com/simp/puppetlabs-concat
+    concat:
+      # master is beyond 4.1.1, but has breaking changes to
+      # how fragments are ordered (MODULES-6625)
+      repo: https://github.com/simp/puppetlabs-concat
+      ref: 4.1.1
     pki: https://github.com/simp/pupmod-simp-pki
     rsync: https://github.com/simp/pupmod-simp-rsync
     rsyslog: https://github.com/simp/pupmod-simp-rsyslog
@@ -25,6 +27,8 @@ fixtures:
     puppet_enterprise:
       repo: https://github.com/simp/pupmod-mock-puppet_enterprise
       ref: 0.3.0
-    puppet_authorization: https://github.com/simp/puppetlabs-puppet_authorization.git
+    puppet_authorization:
+      repo: https://github.com/simp/puppetlabs-puppet_authorization
+      ref: 0.4.0
   symlinks:
     pupmod: "#{source_dir}"
